apps/internetbanking-middleware/overlay/dev/replica-patch.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: internetbanking-middleware
spec:
  replicas: 1
